opam-version: "2.0"
synopsis: "ocamlformat_auto_completion"
depends: [
  "dune" {>= "2.9"}
  "ocaml" {>= "4.12"}
  "lsp" {= "1.7.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst" "--root" "."] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files"
    "false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
